# CrowGest

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  PRODUCCION.md  README.md  docker-compose.yml  firestore.rules  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260520_001_ventas_fiscal.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/core/: __init__.py  auth.py  db.py  deps.py  exceptions.py  logging.py  settings.py
backend/app/modules/: __init__.py
backend/app/modules/ventas/: afip_service.py  afip_wsfe.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_afip_wsfe.py  test_comprobantes.py  test_health.py
src/: App.jsx  index.css
src/api/: comprobantesApi.js  httpClient.js
src/config/: demoAccess.js  navigation.js
src/context/: AuthContext.jsx  DataContext.jsx  PermissionsContext.jsx  ThemeContext.jsx
src/data/: dashboardMock.js
src/pages/: Auditoria.jsx  Clientes.jsx  Comisiones.jsx  Comprobantes.jsx  ComprobantesProveedor.jsx  Configuracion.jsx  CuentaCorriente.jsx  CuentaCorrienteProveedores.jsx  Dashboard.jsx  Facturas.jsx  Login.jsx  Maestros.jsx  Movimientos.jsx  OrdenesCompra.jsx  Pagos.jsx  Pedidos.jsx  PedidosAFacturar.jsx  Presupuestos.jsx  Productos.jsx  Proveedores.jsx  Remitos.jsx  RemitosCompra.jsx  Reportes.jsx  StockKardex.jsx  Tesoreria.jsx  Ventas.jsx
src/utils/: bankImport.js  comisiones.js  comisiones.test.js  comprobantesFiscales.js  comprobantesFiscales.test.js  ctaCte.js  ctaCte.test.js  ctaCteProveedores.js  dashboardStats.js  exportTools.js  (+8 more)
tests/: firestore-rules.test.mjs
(+29 files in other folders)
