[project]
name = "crowgest-backend"
version = "0.1.0"
description = "Backend FastAPI del sistema de gestion CrowGest"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "CrowGest" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "firebase-admin>=6.6.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]
# Integración fiscal real con ARCA (WSAA + WSFEv1). Opcional: solo se
# necesita cuando AFIP_MODE es homologacion o production.
afip = [
    "zeep>=4.3.1",
    "cryptography>=44.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "ARG",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "ARG001", "S101"]
"alembic/*" = ["E501", "ARG001", "I001"]
"app/core/auth.py" = ["PLC0415", "PLW0603"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["firebase_admin.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error", "ignore::DeprecationWarning"]
